# hippo-protocol

./: .gitignore  .goreleaser.yaml  Dockerfile  LICENSE  Makefile  README.md  go.mod  go.sum
.github/: dependabot.yml
.github/workflows/: deploy-docs.yml  go.yml  release.yml  rust.yml  sdk.yml
app/: ante.go  ante_test.go  app.go  app_test.go  encoding.go  export.go  export_test.go  genesis_test.go  inflation.go  inflation_test.go  keys_test.go  prefix.go
app/keepers/: keepers.go  keepers_test.go  keys.go  keys_test.go
app/upgrades/: types.go
app/upgrades/v1_0_1/: constants.go  upgrade.go
app/upgrades/v1_0_2/: constants.go  upgrade.go
app/upgrades/v1_0_3/: README.md  constants.go  integration_test.go  upgrade.go  upgrade_test.go
app/upgrades/v2_0_0/: README.md  constants.go  integration_test.go  upgrade.go  upgrade_test.go
client/docs/: config.json
cmd/hippod/: main.go
docs/: BUILD_COSMWASM.md  cosmwasm-integration-analysis.md  cosmwasm-review-summary.md
docs/docs/getting-started/: installation.md
docs/docs/hub-tutorials/: join-mainnet.md
docs/docs/validators/: validator-setup.md
hippod/: main.go  main_test.go
hippod/cmd/: genaccounts.go  genaccounts_test.go  init.go  init_test.go  root.go  root_test.go
hub/: README.md
proto/: buf.yaml
proto/scripts/: protocgen.sh
sdk/core/: .gitignore  Cargo.toml  README.md
sdk/core/examples/: README.md  index.js
sdk/core/examples/nodejs/: index.js
sdk/core/examples/web/: README.md
sdk/core/examples/web/src/: App.tsx
sdk/core/examples/web/src/assets/pkg/: core.d.ts  core.js  core_bg.js  core_bg.wasm  core_bg.wasm.d.ts
sdk/core/src/: lib.rs  main.rs  types.rs
sdk/core/src/tests/: mod.rs  rust.rs  wasm.rs
sdk/js/examples/nodejs/: README.md  index.js  package-lock.json  package.json
sdk/js/examples/web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
sdk/js/examples/web/src/: App.tsx
sdk/js/pkg/: README.md  hippo-sdk-1.0.0.tgz  hippo-sdk-2.0.0.tgz  hippo-sdk-2.0.1.tgz  hippo-sdk-2.0.2.tgz  package.json
sdk/js/pkg/bundle/: core.d.ts  core.js  core_bg.js  core_bg.wasm  core_bg.wasm.d.ts  package.json
sdk/js/pkg/node/: README.md  core.d.ts  core.js  core_bg.js  core_bg.wasm  core_bg.wasm.d.ts  package.json
test/: cli_test.go  helper.go  helper_test.go  inflation_test.go  main_test.go
test/e2e/: api_rpc_test.go  cli_test.go  wasm_test.go
test/e2e/testdata/contracts/: README.md  bulletproof.md  bulletproof.wasm  counter.md  counter.wasm  cw20_token.md  cw20_token.wasm  nameservice.md  nameservice.wasm
test/e2e/testdata/contracts/bulletproof-contract/: Cargo.toml  README.md
test/e2e/testdata/contracts/bulletproof-contract/.cargo/: config.toml
test/e2e/testdata/contracts/bulletproof-contract/src/: contract.rs  error.rs  msg.rs  state.rs
test/e2e/testdata/contracts/counter-contract/: Cargo.toml  README.md
test/e2e/testdata/contracts/counter-contract/src/: contract.rs  state.rs
test/e2e/testdata/contracts/cw20-token-contract/: Cargo.toml  README.md
test/e2e/testdata/contracts/cw20-token-contract/src/: contract.rs  error.rs  msg.rs  state.rs
test/e2e/testdata/contracts/nameservice-contract/: Cargo.toml  README.md
test/e2e/testdata/contracts/nameservice-contract/src/: contract.rs  error.rs  msg.rs  state.rs
types/assets/: assets.go
types/compkey/: compkey_test.go
types/consensus/: policy.go  policy_test.go  prefix.go  units.go  units_test.go  wallet.go  wallet_test.go
types/testsuite/: suite.go
