[package]
name = "hippo-sdk"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
aes-gcm = "0.10.3"
secp256k1 = { version = "0.30.0", features = ["hashes", "rand", "std"] }
serde = { version = "1.0.217", features = ["derive"] }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
