[package]
name = "hippo-sdk"
version = "2.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
aes-gcm = "0.10.3"
serde = { version = "1.0.217", features = ["derive"] }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6.5"
secp256k1-zkp = { version = "0.11.0", features = ["rand-std", "std", "hashes"] }
hex = "0.4.3"
base64 = "0.22.1"

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
