[package]
name = "hippo-sdk"
version = "2.0.2"
edition = "2021"
description = "Core WebAssembly SDK for the Hippo Protocol"
license = "MIT"
repository = "https://github.com/hippo-protocol/hippo-protocol"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aes-gcm = "0.10.3"
serde = { version = "1.0.217", features = ["derive"] }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6.5"
secp256k1-zkp = { version = "0.11.0", features = ["rand-std", "std", "hashes"] }
hex = "0.4.3"
base64 = "0.22.1"
console_error_panic_hook = "0.1.6"

[dev-dependencies]
wasm-bindgen-test = "0.3.0"

# Optimize the final Wasm binary
[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1