[package]
name = "bulletproof-contract"
version = "1.0.0"
authors = ["Hippo Protocol <dev@hippo-protocol.io>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
strip = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = "1.5"
cosmwasm-std = "1.5"
cw-storage-plus = "1.2"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "1.0"
bulletproofs = { version = "4.0.0", default-features = false }
curve25519-dalek-ng = { version = "4.1.1", default-features = false, features = ["alloc", "u64_backend"] }
merlin = { version = "3", default-features = false }
rand_chacha = { version = "0.3", default-features = false }
rand_core = { version = "0.6", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10", default-features = false }
clear_on_drop = { version = "0.2", default-features = false, features = ["no_cc"] }

[dev-dependencies]
cw-multi-test = "0.20"
rand = "0.8"
